# neutron-os-core

./: .dockerignore  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PUBLISHER_USAGE.md  PUBLISH_CHECKLIST.md  README.md  REFACTORING_PLAN.md  conftest.py  pyproject.toml
.claude.example/: context.md
.docflow/: state.json
.github/workflows/: ci.yml
.neut/: comments_medical.xml  test_cleanup.py
.neut/archive/: SESSION_2026-02-24_docflow_consolidation.md  setup-state.json
.neut/docflow/: workflow.yaml.example
.neut/publisher/: workflow.yaml
archive/: README.md
archive/docflow-elaborate-2026-02/docflow/: .doc-workflow.yaml.template  .gitlab-ci.yml  AGENT_INTEGRATION_ARCHITECTURE.md  AGENT_RAG_ARCHITECTURE.md  DEVELOPER_GUIDE.md  DIAGRAM_IMPLEMENTATION.md  DIAGRAM_STRATEGY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  ONBOARDING_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  README.md  SETUP_AND_ONBOARDING.md  TODO.md  WHAT_WAS_BUILT.md  bootstrap.sh  pyproject.toml
archive/docflow-elaborate-2026-02/docflow/.github/workflows/: ci.yml
archive/docflow-elaborate-2026-02/docflow/convert/: universal_converter.py
archive/docflow-elaborate-2026-02/docflow/deploy/helm/docflow/: Chart.yaml  values-prod.yaml  values-stage.yaml  values.yaml
archive/docflow-elaborate-2026-02/docflow/deploy/helm/docflow/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-agent.yaml  deployment-api.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
archive/docflow-elaborate-2026-02/docflow/deploy/k3d/: Makefile  k3d-config.yaml
archive/docflow-elaborate-2026-02/docflow/deploy/k3d/manifests/: ollama.yaml
archive/docflow-elaborate-2026-02/docflow/deploy/k3d/values/: docflow-local.yaml  postgresql-local.yaml  redis-local.yaml
archive/docflow-elaborate-2026-02/docflow/deploy/terraform/environments/prod/: main.tf
archive/docflow-elaborate-2026-02/docflow/deploy/terraform/environments/stage/: main.tf
archive/docflow-elaborate-2026-02/docflow/deploy/terraform/modules/eks/: main.tf
archive/docflow-elaborate-2026-02/docflow/deploy/terraform/modules/elasticache/: main.tf
archive/docflow-elaborate-2026-02/docflow/deploy/terraform/modules/rds/: main.tf
archive/docflow-elaborate-2026-02/docflow/deploy/terraform/modules/vpc/: main.tf
archive/docflow-elaborate-2026-02/docflow/docker/: Dockerfile.agent  Dockerfile.api
archive/docflow-elaborate-2026-02/docflow/docs/: CICD_INFRASTRUCTURE.md  COLLABORATIVE_WORKFLOW.md  IDE_INTEGRATION.md
archive/docflow-elaborate-2026-02/docflow/examples/: diagram_example.md  diagram_python_example.py
archive/docflow-elaborate-2026-02/docflow/onboarding/: intelligent_onboard.py
archive/docflow-elaborate-2026-02/docflow/providers/: google_drive.py
archive/docflow-elaborate-2026-02/docflow/scripts/: local-dev.sh  scrub_for_oss.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/: __init__.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/agent/: __init__.py  cli.py  core.py  tools.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/cli/: __init__.py  main.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/convert/: __init__.py  comment_extractor.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/core/: __init__.py  config.py  persistence.py  registry.py  state.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/diagrams/: __init__.py  cli.py  design_system.py  evaluator.py  generators.py  intelligence.py  parser.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/embedding/: __init__.py  pipeline.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/git/: __init__.py  integration.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/llm/: __init__.py  anthropic_provider.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/meetings/: __init__.py  processor.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/providers/: __init__.py  base.py  factory.py  local.py  onedrive.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/rag/: __init__.py  embedder.py  pgvector.py  retriever.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/review/: __init__.py  manager.py
archive/docflow-elaborate-2026-02/docflow/src/docflow/workflow/: __init__.py  graph.py
archive/docflow-elaborate-2026-02/docflow/tests/: __init__.py  test_diagrams.py  test_integration.py  test_providers.py  test_state.py
blockchain/: README.md
data/: README.md
docs/: README.md  experiment-manager-merge-plan.md  glossary-axiom.toml  glossary-neutronos.toml  glossary.md  merge-scenario-guide.md
docs/_tools/: PUBLISHER_USAGE.md  PUBLISH_CHECKLIST.md  PUBLISH_SETUP.md  README.md  mermaid-standards.py  publish_to_onedrive.py  setup_onedrive.sh
docs/analysis/: INTEGRATION_REQUEST_NeutronOS.md  README.md
docs/design/: brand-identity.md  sense-health-monitoring-plan.md
docs/legal/: README.md  codebase-split-plan.md
docs/prd/: .comments-medical-isotope-prd.md  NEUTRONOS_OVERVIEW.md  README.md  compliance-tracking-prd.md  data-platform-prd.md  media-library-prd.md  medical-isotope-prd.md  neut-cli-prd.md  (+3 more)
frontend/: README.md
infra/: README.md
runtime/: README.md
scripts/: README.md  bootstrap.sh  com.utcomputational.gitlab-export.plist  install-service.sh  install.sh  lint_mermaid.py  neut  neut-doctor  push-public.sh  rename-docs.sh  setup-rascal.sh  split-codebase.sh  sync-knowledge.sh
services/: README.md
spikes/: README.md
spikes/wasm-surrogate-runtime/: Cargo.toml  README.md
spikes/wasm-surrogate-runtime/host/: Cargo.toml
spikes/wasm-surrogate-runtime/host/src/: main.rs
spikes/wasm-surrogate-runtime/surrogates/gp-surrogate/: Makefile  gp_surrogate.c  gp_surrogate.h
spikes/wasm-surrogate-runtime/wit/: surrogate.wit
tests/: README.md  conftest.py  test_eve_prt_pipeline.py  test_mirror_linkage.py  test_repo_hygiene.py
tools/: cli_registry.py  gitlab_tracker_export.py  neut_cli.py  run_gitlab_export.sh  test_gitlab_tracker_export.py
(+1188 files in other folders)
