[project]
name = "neutron-os"
version = "0.6.0"
description = "Nuclear facility digital operations platform — extends Axiom"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "axiom @ git+https://github.com/benjaminbooth/axiom.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = [
    "neutron-os[dev]",
]

[project.scripts]
neut = "neutron_os.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/neutron_os"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/neutron_os/extensions"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that hit external services",
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501", "SIM108", "SIM105", "SIM102", "SIM117", "SIM115",
    "UP042", "B904", "B027", "B007", "B905", "B023", "SIM103",
]

[tool.ruff.lint.isort]
known-first-party = ["neutron_os", "axiom"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingModuleSource = false
