[workspace]
resolver = "2"
members = ["host"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ut-computational-ne/neutron-os"

[workspace.dependencies]
wasmtime = "27"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
