[package]
name = "neut-wasm-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "neut-wasm-host"
path = "src/main.rs"

[dependencies]
wasmtime.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
